--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <div class="inner">
                 <h1>
                     <a href="/">
-                        <img src="./img/logo_off.png" alt="로고">
+                        <div class="logo">
+
+                        </div>
                     </a>
                 </h1>
                 <!-- {gnb -->
@@ -32,8 +34,8 @@
                     <ul>
                         <li>
                             <a href="">회사소개</a>
-                            <nav class="lnb">
-                                <div class="lnb_inner">
+                            <nav class="smenu">
+                                <div class="smenu_inner">
                                     <div class="left">
                                         <div class="container">
                                             <span>회사소개</span>
@@ -73,8 +75,8 @@
                             </nav>
                         </li>
                         <li><a href="">주요사업</a>
-                            <nav class="lnb">
-                                <div class="lnb_inner">
+                            <nav class="smenu">
+                                <div class="smenu_inner">
                                     <div class="left">
                                         <span>주요사업</span>
                                         <p>월등한 기술력에 기반한 완벽 시공으로<br />
@@ -105,8 +107,8 @@
                             </nav>
                         </li>
                         <li><a href="">R&D</a>
-                            <nav class="lnb">
-                                <div class="lnb_inner">
+                            <nav class="smenu">
+                                <div class="smenu_inner">
                                     <div class="left">
                                         <span>R&D</span>
                                         <p>월등한 기술력에 기반한 완벽 시공으로<br />
@@ -138,8 +140,8 @@
                             </nav>
                         </li>
                         <li><a href="">PR ROOM</a>
-                            <nav class="lnb">
-                                <div class="lnb_inner">
+                            <nav class="smenu">
+                                <div class="smenu_inner">
                                     <div class="left">
                                         <span>PR ROOM</span>
                                         <p>월등한 기술력에 기반한 완벽 시공으로<br />
@@ -177,8 +179,8 @@
                             </nav>
                         </li>
                         <li><a href="">인재채용</a>
-                            <nav class="lnb">
-                                <div class="lnb_inner">
+                            <nav class="smenu">
+                                <div class="smenu_inner">
                                     <div class="left">
                                         <span>인재채용</span>
                                         <p>월등한 기술력에 기반한 완벽 시공으로<br />
@@ -267,6 +269,162 @@
             </section>
             <!-- mainVisual} -->
 
+            <!-- {mainBusiness -->
+            <section class="mainBusiness">
+                <div class="main_bn">
+                    <div class="inner">
+                        <div class="top">
+                            <div class="itm">
+                                <a href="">
+                                    <div class="container">
+                                        <span>CIVIL<br />
+                                            WORKS</span>
+                                        <p>토목</p>
+                                    </div>
+                                    <figure>
+                                        <img src="./img/business01.jpg" alt="">
+                                    </figure>
+                                </a>
+
+                            </div>
+                            <div class="itm">
+                                <a href="">
+                                    <div class="container">
+                                        <span>ARCHITECTURAL<br />
+                                            WORKS</span>
+                                        <p>건축</p>
+                                    </div>
+                                    <figure>
+                                        <img src="./img/business02.jpg" alt="">
+                                    </figure>
+                                </a>
+
+                            </div>
+                            <div class="itm">
+                                <div class="tit">
+                                    <h2>BUSINESS</h2>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="bottom">
+                            <div class="itm">
+
+                            </div>
+                            <div class="itm">
+                                <a href="">
+                                    <div class="container">
+                                        <span>PLANTS<br />
+                                            ENVIRONMENTAL<br />
+                                            WORKS</span>
+                                        <p>플랜트 환경</p>
+                                    </div>
+                                    <figure>
+                                        <img src="./img/business03.jpg" alt="">
+                                    </figure>
+                                </a>
+
+                            </div>
+                            <div class="itm">
+                                <a href="">
+                                    <div class="container">
+                                        <span>OVERSEAS<br />
+                                            BUSINESS</span>
+                                        <p>해외사업</p>
+                                    </div>
+                                    <figure>
+                                        <img src="./img/business04.jpg" alt="">
+                                    </figure>
+                                </a>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+            <!-- mainBusiness} -->
+
+            <!-- {mainPortfolio -->
+            <section class="mainPortfolio">
+                <div class="main_port">
+                    <div class="inner">
+                        <div class="intro">
+                            <h2>PORTFOLIO</h2>
+                            <ul>
+                                <li><a href="">토목</a></li>
+                                <li><a href="">건축</a></li>
+                                <li><a href="">플랜트환경</a></li>
+                                <li><a href="">해외사업</a></li>
+                            </ul>
+                        </div>
+                        <div class="list_slide">
+                            <div class="tab_list01 tab">
+                                <div class="box">
+                                    <figure>
+                                        <img src="./img/port01_01.jpg" alt="">
+                                    </figure>
+                                </div>
+
+                                <div class="container">
+                                    <span>도로/터널/교량</span>
+                                    <em>CIVILENGINEERING WORKS</em>
+                                    <p>극동건설은 허허벌판에 길을 내고, 망망대해에 다리를 놓으며,<br />
+                                        대한민국 지도를 바꾸어 왔습니다.</p>
+                                    <a href="">Detail view</a>
+                                </div>
+                            </div>
+                            <div class="tab_list02 tab">
+                                <div class="box">
+                                    <figure>
+                                        <img src="./img/port01_02.jpg" alt="">
+                                    </figure>
+                                </div>
+
+                                <div class="container">
+                                    <span>철도/지하철</span>
+                                    <em>CIVILENGINEERING WORKS</em>
+                                    <p>극동건설은 철길을 따라, 지하공간을 지나<br />
+                                        대한민국의 경제발전을 이끌어 왔습니다.</p>
+                                    <a href="">Detail view</a>
+                                </div>
+                            </div>
+                            <div class="tab_list03 tab">
+                                <div class="box">
+                                    <figure>
+                                        <img src="./img/port01_03.jpg" alt="">
+                                    </figure>
+                                </div>
+
+                                <div class="container">
+                                    <span>댐/항만/수자원</span>
+                                    <em>CIVILENGINEERING WORKS</em>
+                                    <p>극동건설은 우수한 항만개발 역량을 발휘하여<br />
+                                        대한민국을 동북아 허브 물류기지로 만들겠습니다.</p>
+                                    <a href="">Detail view</a>
+                                </div>
+                            </div>
+                            <div class="tab_list04 tab">
+                                <div class="box">
+                                    <figure>
+                                        <img src="./img/port01_04.jpg" alt="">
+                                    </figure>
+                                </div>
+
+                                <div class="container">
+                                    <span>단지조성</span>
+                                    <em>CIVILENGINEERING WORKS</em>
+                                    <p>극동건설은 우수한 토목 시공능력을 바탕으로<br />
+                                        대한민국의 국토개발에 앞장서 왔습니다.</p>
+                                    <a href="">Detail view</a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+            <!-- mainPortfolio} -->
 
         </main>
         <!-- main} -->
