--- a/index.html
+++ b/index.html
@@ -352,10 +352,10 @@
                         <div class="intro">
                             <h2>PORTFOLIO</h2>
                             <ul>
-                                <li><a href="">토목</a></li>
-                                <li><a href="">건축</a></li>
-                                <li><a href="">플랜트환경</a></li>
-                                <li><a href="">해외사업</a></li>
+                                <li>토목</li>
+                                <li>건축</li>
+                                <li>플랜트환경</li>
+                                <li>해외사업</li>
                             </ul>
                         </div>
                         <div class="list_slide">
@@ -426,12 +426,210 @@
             </section>
             <!-- mainPortfolio} -->
 
+            <!-- {mainMid -->
+            <section class="mainMid">
+                <div class="main_mid">
+                    <div class="inner">
+                        <h2>개개인의 특성과 능력을 중시하는 극동건설은<br />
+                            여러분의 성장의 터를 마련합니다.</h2>
+                        <div class="container">
+                            <div class="itm">
+                                <span>
+                                    <a href="">인재상</a>
+                                </span>
+                                <p>극동건설이 추구하는 인재상을<br />
+                                    여러분께 소개합니다</p>
+                            </div>
+                            <div class="itm">
+                                <span>
+                                    <a href="">인사제도</a>
+                                </span>
+                                <p>임직원의 역량향상과 동기부여를 위해<br />
+                                    다양한 제도를 운영합니다</p>
+                            </div>
+                            <div class="itm">
+                                <span>
+                                    <a href="">채용안내</a>
+                                </span>
+                                <p>극동건설의 채용제도 및 절차를<br />
+                                    자세히 소개합니다</p>
+                            </div>
+                            <div class="itm">
+                                <span>
+                                    <a href="">채용공고</a>
+                                </span>
+                                <p>극동건설의 채용공고를<br />
+                                    소개합니다</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- mainMid} -->
+
+            <!-- {mainPR -->
+            <section class="mainPR">
+                <div class="main_PR">
+                    <div class="inner">
+                        <div class="intro">
+                            <h2>PR Center</h2>
+                            <p>세상에 없던 신기술을 개척하는 기업,극동건설이 기술의 진보를 선도합니다</p>
+                        </div>
+
+
+                        <div class="miniwrap">
+                            <div class="left">
+                                <div class="itm ">
+                                    <a href="">
+                                        <div class="tit">
+                                            <span>극동뉴스</span>
+                                            <p>극동건설의 다양한 소식을 가장 빠르게<br />
+                                                전달해드립니다</p>
+                                        </div>
+                                        <figure>
+                                            <img src="./img/pr_img1.jpg" alt="">
+                                        </figure>
+                                    </a>
+
+
+                                </div>
+                                <div class="itm">
+                                    <a href="">
+                                        <div class="tit">
+                                            <span>R&D</span>
+                                            <p>끊임없는 신기술 개발과 혁신으로<br />
+                                                극동건설이 건축기술의 진보를 위해<br />
+                                                노력하고 있습니다</p>
+                                        </div>
+                                        <figure>
+                                            <img src="./img/pr_img2.jpg" alt="">
+                                        </figure>
+                                    </a>
+
+                                </div>
+                            </div>
+                            <div class="right">
+                                <a href="">
+                                    <div class="box">
+                                        <div class="tit">
+                                            <span>언론속의</span>
+                                            <strong>극동</strong>
+                                            <p>언론에 소개되는<br />
+                                                극동의 소식을<br />
+                                                안내해드립니다</p>
+                                        </div>
+                                    </div>
+                                </a>
+
+                                <a href="">
+                                    <div class="box">
+                                        <div class="tit">
+                                            <span>입주고객 </span>
+                                            <strong>A/S 안내</strong>
+                                            <p>스타클래스 입주 후<br />
+                                                A/S 신청에<br />
+                                                대한 안내 입니다</p>
+                                        </div>
+                                    </div>
+                                </a>
+
+
+                                <a href="">
+                                    <div class="box">
+                                        <div class="tit">
+                                            <span>극동건설</span>
+                                            <strong>인재채용</strong>
+                                            <p>극동건설과 함께 성장해<br />
+                                                나갈 인재를 모집합니다</p>
+                                        </div>
+                                    </div>
+                                </a>
+
+                                <a href="">
+                                    <div class="box">
+                                        <div class="tit">
+                                            <span>기업</span>
+                                            <strong>홍보영상</strong>
+                                            <p>극동건설의 다양한<br />
+                                                홍보영상을 소개합니다</p>
+                                        </div>
+                                    </div>
+                                </a>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- mainPR} -->
+
+            <!-- {mainBanner -->
+            <section class="mainBanner">
+                <div class="main_banner">
+                    <div class="inner">
+                        <a href="">
+                            <figure>
+                                <img src="./img/bottom_logo01.jpg" alt="">
+                            </figure>
+                        </a>
+                        <a href="">
+                            <figure>
+                                <img src="./img/bottom_logo02.jpg" alt="">
+                            </figure>
+                        </a>
+                        <a href="">
+                            <figure>
+                                <img src="./img/bottom_logo03.jpg" alt="">
+                            </figure>
+                        </a>
+                        <a href="">
+                            <figure>
+                                <img src="./img/bottom_logo04.jpg" alt="">
+                            </figure>
+                        </a>
+                        <a href="">
+                            <figure>
+                                <img src="./img/bottom_logo05.jpg" alt="">
+                            </figure>
+                        </a>
+                    </div>
+                </div>
+
+            </section>
+            <!-- mainBanner} -->
         </main>
         <!-- main} -->
 
         <!-- {footer -->
         <footer class="footer">
-
+            <div class="inner">
+                <div class="top">
+                    <figure>
+                        <img src="./img/ft_logo.png" alt="">
+                    </figure>
+                    <ul>
+                        <li><a href="">이용약관</a></li>
+                        <li><a href="">개인정보처리방침</a></li>
+                        <li><a href="">CONTACT US</a></li>
+                    </ul>
+                </div>
+                <div class="bottom">
+                    <div class="left">
+                        <address>서울특별시 마포구 마포대로 163 (서울신용보증재단), 9층</address>
+                        <p>&copy;2020 KUKDONG. LTD. All Rights Reserved.</p>
+                    </div>
+                    <div class="right">
+                        <form action="">
+                            <select id="f_link">
+                                <option value="">Family Link</option>
+                                <option value="http://naver.com">Naver</option>
+                                <option value="http://daum.net">Daum</option>
+                                <option value="http://google.com">Google</option>
+                            </select>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </footer>
         <!-- footer} -->
     </div>
