--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>극동건설</title>
     <!-- 순서지키기 -->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/slick.css">
@@ -434,30 +434,51 @@
                             여러분의 성장의 터를 마련합니다.</h2>
                         <div class="container">
                             <div class="itm">
-                                <span>
-                                    <a href="">인재상</a>
-                                </span>
+                                <a href="">
+                                    <strong>인재상
+                                        <span class="bottom"></span>
+                                        <span class="right"></span>
+                                        <span class="top"></span>
+                                        <span class="left"></span>
+                                    </strong>
+
+                                </a>
                                 <p>극동건설이 추구하는 인재상을<br />
                                     여러분께 소개합니다</p>
                             </div>
                             <div class="itm">
-                                <span>
-                                    <a href="">인사제도</a>
-                                </span>
+                                <a href="">
+                                    <strong>인사제도
+                                        <span class="bottom"></span>
+                                        <span class="right"></span>
+                                        <span class="top"></span>
+                                        <span class="left"></span>
+                                    </strong>
+                                </a>
                                 <p>임직원의 역량향상과 동기부여를 위해<br />
                                     다양한 제도를 운영합니다</p>
                             </div>
                             <div class="itm">
-                                <span>
-                                    <a href="">채용안내</a>
-                                </span>
+                                <a href="">
+                                    <strong>채용안내
+                                        <span class="bottom"></span>
+                                        <span class="right"></span>
+                                        <span class="top"></span>
+                                        <span class="left"></span>
+                                    </strong>
+                                </a>
                                 <p>극동건설의 채용제도 및 절차를<br />
                                     자세히 소개합니다</p>
                             </div>
                             <div class="itm">
-                                <span>
-                                    <a href="">채용공고</a>
-                                </span>
+                                <a href="">
+                                    <strong>채용공고
+                                        <span class="bottom"></span>
+                                        <span class="right"></span>
+                                        <span class="top"></span>
+                                        <span class="left"></span>
+                                    </strong>
+                                </a>
                                 <p>극동건설의 채용공고를<br />
                                     소개합니다</p>
                             </div>
@@ -479,7 +500,7 @@
 
                         <div class="miniwrap">
                             <div class="left">
-                                <div class="itm ">
+                                <div class="itm">
                                     <a href="">
                                         <div class="tit">
                                             <span>극동뉴스</span>
@@ -490,8 +511,6 @@
                                             <img src="./img/pr_img1.jpg" alt="">
                                         </figure>
                                     </a>
-
-
                                 </div>
                                 <div class="itm">
                                     <a href="">
@@ -505,9 +524,11 @@
                                             <img src="./img/pr_img2.jpg" alt="">
                                         </figure>
                                     </a>
-
                                 </div>
                             </div>
+
+
+
                             <div class="right">
                                 <a href="">
                                     <div class="box">
@@ -518,6 +539,9 @@
                                                 극동의 소식을<br />
                                                 안내해드립니다</p>
                                         </div>
+                                    </div>
+                                    <div class="arrow">
+                                        화살표
                                     </div>
                                 </a>
 
@@ -531,6 +555,9 @@
                                                 대한 안내 입니다</p>
                                         </div>
                                     </div>
+                                    <div class="arrow">
+                                        화살표
+                                    </div>
                                 </a>
 
 
@@ -543,6 +570,9 @@
                                                 나갈 인재를 모집합니다</p>
                                         </div>
                                     </div>
+                                    <div class="arrow">
+                                        화살표
+                                    </div>
                                 </a>
 
                                 <a href="">
@@ -553,6 +583,9 @@
                                             <p>극동건설의 다양한<br />
                                                 홍보영상을 소개합니다</p>
                                         </div>
+                                    </div>
+                                    <div class="arrow">
+                                        화살표
                                     </div>
                                 </a>
 
