--- a/index.html
+++ b/index.html
@@ -351,74 +351,194 @@
                     <div class="inner">
                         <div class="intro">
                             <h2>PORTFOLIO</h2>
-                            <ul>
-                                <li>토목</li>
-                                <li>건축</li>
-                                <li>플랜트환경</li>
-                                <li>해외사업</li>
-                            </ul>
+                            <div class="buttons">
+                                <button class="active">토목</button>
+                                <button>건축</button>
+                                <button>플랜트환경</button>
+                                <button>해외사업</button>
+                            </div>
                         </div>
-                        <div class="list_slide">
-                            <div class="tab_list01 tab">
-                                <div class="box">
-                                    <figure>
+                        <div class="tabs">
+                            <div class="tab active">
+                                <div class="slider list01">
+                                    <figure class="item01">
+                                        <div class="container">
+                                            <span>도로/터널/교량</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 허허벌판에 길을 내고, 망망대해에 다리를 놓으며,<br />
+                                                대한민국 지도를 바꾸어 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
                                         <img src="./img/port01_01.jpg" alt="">
                                     </figure>
-                                </div>
-
-                                <div class="container">
-                                    <span>도로/터널/교량</span>
-                                    <em>CIVILENGINEERING WORKS</em>
-                                    <p>극동건설은 허허벌판에 길을 내고, 망망대해에 다리를 놓으며,<br />
-                                        대한민국 지도를 바꾸어 왔습니다.</p>
-                                    <a href="">Detail view</a>
-                                </div>
-                            </div>
-                            <div class="tab_list02 tab">
-                                <div class="box">
-                                    <figure>
+                                    <figure class="item02">
+                                        <div class="container">
+                                            <span>철도/지하철</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 철길을 따라, 지하공간을 지나<br />
+                                                대한민국의 경제발전을 이끌어 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
                                         <img src="./img/port01_02.jpg" alt="">
                                     </figure>
-                                </div>
-
-                                <div class="container">
-                                    <span>철도/지하철</span>
-                                    <em>CIVILENGINEERING WORKS</em>
-                                    <p>극동건설은 철길을 따라, 지하공간을 지나<br />
-                                        대한민국의 경제발전을 이끌어 왔습니다.</p>
-                                    <a href="">Detail view</a>
-                                </div>
-                            </div>
-                            <div class="tab_list03 tab">
-                                <div class="box">
-                                    <figure>
+                                    <figure class="item03">
+                                        <div class="container">
+                                            <span>댐/항만/수자원</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 우수한 항만개발 역량을 발휘하여<br />
+                                                대한민국을 동북아 허브 물류기지로 만들겠습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
                                         <img src="./img/port01_03.jpg" alt="">
                                     </figure>
-                                </div>
-
-                                <div class="container">
-                                    <span>댐/항만/수자원</span>
-                                    <em>CIVILENGINEERING WORKS</em>
-                                    <p>극동건설은 우수한 항만개발 역량을 발휘하여<br />
-                                        대한민국을 동북아 허브 물류기지로 만들겠습니다.</p>
-                                    <a href="">Detail view</a>
-                                </div>
-                            </div>
-                            <div class="tab_list04 tab">
-                                <div class="box">
-                                    <figure>
+                                    <figure class="item04">
+                                        <div class="container">
+                                            <span>단지조성</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 우수한 토목 시공능력을 바탕으로<br />
+                                                대한민국의 국토개발에 앞장서 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
                                         <img src="./img/port01_04.jpg" alt="">
                                     </figure>
                                 </div>
+                            </div>
 
-                                <div class="container">
-                                    <span>단지조성</span>
-                                    <em>CIVILENGINEERING WORKS</em>
-                                    <p>극동건설은 우수한 토목 시공능력을 바탕으로<br />
-                                        대한민국의 국토개발에 앞장서 왔습니다.</p>
-                                    <a href="">Detail view</a>
+                            <div class="tab">
+                                <div class="slider list02">
+                                    <figure class="item01">
+                                        <div class="container">
+                                            <span>도로/터널/교량</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 허허벌판에 길을 내고, 망망대해에 다리를 놓으며,<br />
+                                                대한민국 지도를 바꾸어 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port02_01.jpg" alt="">
+                                    </figure>
+                                    <figure class="item02">
+                                        <div class="container">
+                                            <span>철도/지하철</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 철길을 따라, 지하공간을 지나<br />
+                                                대한민국의 경제발전을 이끌어 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port02_02.jpg" alt="">
+                                    </figure>
+                                    <figure class="item03">
+                                        <div class="container">
+                                            <span>댐/항만/수자원</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 우수한 항만개발 역량을 발휘하여<br />
+                                                대한민국을 동북아 허브 물류기지로 만들겠습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port02_03.jpg" alt="">
+                                    </figure>
+                                    <figure class="item04">
+                                        <div class="container">
+                                            <span>단지조성</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 우수한 토목 시공능력을 바탕으로<br />
+                                                대한민국의 국토개발에 앞장서 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port02_04.jpg" alt="">
+                                    </figure>
                                 </div>
                             </div>
+
+                            <div class="tab">
+                                <div class="slider list03">
+                                    <figure class="item01">
+                                        <div class="container">
+                                            <span>도로/터널/교량</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 허허벌판에 길을 내고, 망망대해에 다리를 놓으며,<br />
+                                                대한민국 지도를 바꾸어 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port03_01.jpg" alt="">
+                                    </figure>
+                                    <figure class="item02">
+                                        <div class="container">
+                                            <span>철도/지하철</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 철길을 따라, 지하공간을 지나<br />
+                                                대한민국의 경제발전을 이끌어 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port03_02.jpg" alt="">
+                                    </figure>
+                                    <figure class="item03">
+                                        <div class="container">
+                                            <span>댐/항만/수자원</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 우수한 항만개발 역량을 발휘하여<br />
+                                                대한민국을 동북아 허브 물류기지로 만들겠습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port03_03.jpg" alt="">
+                                    </figure>
+                                    <figure class="item04">
+                                        <div class="container">
+                                            <span>단지조성</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 우수한 토목 시공능력을 바탕으로<br />
+                                                대한민국의 국토개발에 앞장서 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port03_04.jpg" alt="">
+                                    </figure>
+                                </div>
+                            </div>
+
+                            <div class="tab">
+                                <div class="slider list04">
+                                    <figure class="item01">
+                                        <div class="container">
+                                            <span>도로/터널/교량</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 허허벌판에 길을 내고, 망망대해에 다리를 놓으며,<br />
+                                                대한민국 지도를 바꾸어 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port04_01.jpg" alt="">
+                                    </figure>
+                                    <figure class="item02">
+                                        <div class="container">
+                                            <span>철도/지하철</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 철길을 따라, 지하공간을 지나<br />
+                                                대한민국의 경제발전을 이끌어 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port01_02.jpg" alt="">
+                                    </figure>
+                                    <figure class="item03">
+                                        <div class="container">
+                                            <span>댐/항만/수자원</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 우수한 항만개발 역량을 발휘하여<br />
+                                                대한민국을 동북아 허브 물류기지로 만들겠습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port02_03.jpg" alt="">
+                                    </figure>
+                                    <figure class="item04">
+                                        <div class="container">
+                                            <span>단지조성</span>
+                                            <em>CIVILENGINEERING WORKS</em>
+                                            <p>극동건설은 우수한 토목 시공능력을 바탕으로<br />
+                                                대한민국의 국토개발에 앞장서 왔습니다.</p>
+                                            <a href="">Detail view</a>
+                                        </div>
+                                        <img src="./img/port03_04.jpg" alt="">
+                                    </figure>
+                                </div>
+                            </div>
+
                         </div>
 
                     </div>
